[tool.poetry]
name = "pycolbertdb"
version = "0.2.8"
description = "Python client for colbertdb"
authors = ["Ryan Sloan <rysloan4@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.0"
datamodel-code-generator = {extras = ["http"], version = "^0.25.6"}
pytest = "^8.2.0"
llama-index-readers-web = "^0.1.14"


[tool.poetry.group.dev.dependencies]
llama-index = "^0.10.37"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

